--- a/references.bib
+++ b/references.bib
@@ -160,7 +160,7 @@ archivePrefix = {arXiv},
 
 %% Carretti 2013
 
-@article{2013,
+@article{Carretti_2013,
    title={Giant magnetized outflows from the centre of the Milky Way},
    volume={493},
    ISSN={1476-4687},
@@ -295,7 +295,7 @@ archivePrefix = {arXiv},
 }
 %% West Helicity 2020
 
-@article{10.1093/mnras/staa3068,
+@article{West_Helicity,
     author = {West, J L and Henriksen, R N and Ferrière, K and Woodfinden, A and Jaffe, T and Gaensler, B M and Irwin, J A},
     title = "{Helicity in the large-scale Galactic magnetic field}",
     journal = {Monthly Notices of the Royal Astronomical Society},
